--- a/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
@@ -60,14 +60,14 @@
 				</p:tab>
 
 				<p:tab title="Todas Vagas Disponiveis">
-				
+
 					<p:inputText id="inputText-busca"
 						style="width:30%; height:30px; margin-left:60px" maxlength="80"
 						placeholder="Digite o titulo da vaga"
 						value="#{consultaVagasView.busca}" />
 					<p:outputLabel value=" " />
-					<p:commandButton value="Buscar" update="form" action="#"></p:commandButton>
-
+					<p:commandButton value="Buscar" update="form"
+						action="#{consultaVagasView.retornaVagasConformeBusca}"></p:commandButton>
 
 					<p:dataGrid value="#{consultaVagasView.vagas}" var="vaga"
 						columns="3" layout="grid" rows="9" paginator="true"
