--- a/src/main/webapp/sistema/Voluntario/editarDoacao.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarDoacao.xhtml
@@ -19,7 +19,7 @@
 
 					<p:commandButton value="Excluir Doação" id="commandButton-excluir"
 						icon="fa fa-fw fa-remove" action="#{editarDoacao.removerDoacao}"
-						ajax="false" />
+						style="float: right;" ajax="false" />
 
 				</h:form>
 
