--- a/src/main/webapp/sistema/ONG/recomendarVoluntario.xhtml
+++ b/src/main/webapp/sistema/ONG/recomendarVoluntario.xhtml
@@ -15,10 +15,10 @@
 		<h:form id="form">
 
 			<p:dataGrid value="#{recomendarVoluntarios.voluntariosRecomendados}"
-				var="vol" columns="3" layout="grid" rows="9" paginator="true"
+				var="vol" columns="3" layout="grid" rows="3" paginator="true"
 				style="margin-top:20px">
 
-				<f:facet name="header"> Voluntarios Recomendados </f:facet>
+				<f:facet name="header"> Voluntario recomendados para a vaga cadastrada: </f:facet>
 
 				<p:panel>
 					<h:panelGrid columns="1" style="width:100%;">
