Correções nos icones

--- a/src/main/webapp/cadastrarONG.xhtml
+++ b/src/main/webapp/cadastrarONG.xhtml
@@ -163,7 +163,7 @@
 
 
 						<p:commandButton value="Salvar" id="commandButton-salvar"
-							icon="ui-icon-gear" action="#{ongController.salvarNovaONG}"
+							icon="fa fa-floppy-o" action="#{ongController.salvarNovaONG}"
 							update="panelGrid-campos-form" ajax="false" />
 
 					</h:panelGrid>
