--- a/src/main/webapp/cadastrarVoluntario.xhtml
+++ b/src/main/webapp/cadastrarVoluntario.xhtml
@@ -248,7 +248,7 @@
 						</p:selectOneRadio>
 
 						<p:commandButton value="Salvar" id="commandButton-salvar"
-							icon="ui-icon-gear"
+							icon="fa fa-floppy-o"
 							action="#{voluntarioController.salvarNovoVoluntario}"
 							update="panelGrid-campos-form" ajax="false" />
 
