--- a/src/main/webapp/sistema/ONG/cadastrarEvento.xhtml
+++ b/src/main/webapp/sistema/ONG/cadastrarEvento.xhtml
@@ -87,7 +87,7 @@
 						</p:selectOneMenu>
 
 						<p:commandButton value="Salvar" id="commandButton-salvar"
-							icon="ui-icon-gear" action="#{eventoController.salvarNovoEvento}"
+							icon="fa fa-floppy-o" action="#{eventoController.salvarNovoEvento}"
 							update="panelGrid-campos-form" ajax="false" />
 
 
