--- a/src/main/webapp/sistema/ONG/cadastrarVaga.xhtml
+++ b/src/main/webapp/sistema/ONG/cadastrarVaga.xhtml
@@ -131,7 +131,7 @@
 						</p:selectOneRadio>
 
 						<p:commandButton value="Salvar" id="commandButton-salvar"
-							icon="ui-icon-gear" action="#{vagaController.salvarNovaVaga}"
+							icon="fa fa-floppy-o" action="#{vagaController.salvarNovaVaga}"
 							update="panelGrid-campos-form" ajax="false" />
 
 					</h:panelGrid>
