--- a/src/main/webapp/sistema/ONG/editarONG.xhtml
+++ b/src/main/webapp/sistema/ONG/editarONG.xhtml
@@ -163,7 +163,7 @@
 
 
 						<p:commandButton value="Salvar alterações"
-							id="commandButton-salvar" icon="ui-icon-gear"
+							id="commandButton-salvar" icon="fa fa-floppy-o"
 							action="#{editarONG.atualizarONG}" update="panelGrid-campos-form"
 							ajax="false" />
 
