--- a/src/main/webapp/sistema/ONG/editarVaga.xhtml
+++ b/src/main/webapp/sistema/ONG/editarVaga.xhtml
@@ -142,7 +142,7 @@
 						</p:selectOneRadio>
 
 						<p:commandButton value="Salvar alterações"
-							id="commandButton-salvar" icon="fa-save"
+							id="commandButton-salvar" icon="fa fa-floppy-o"
 							action="#{editarVaga.editarVaga}" update="panelGrid-campos-form"
 							ajax="false" />
 
