--- a/src/main/webapp/sistema/ONG/visualizarDoacoes.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarDoacoes.xhtml
@@ -16,6 +16,7 @@
 
 			<p:dataGrid value="#{consultaDoacoesView.doacoes}" var="doacao"
 				columns="3" layout="grid" rows="9" paginator="true"
+				emptyMessage="Nenhuma doação foi cadastrada até o momento."
 				style="margin-top:20px">
 
 				<f:facet name="header"> Doações </f:facet>
