--- a/src/main/webapp/sistema/Voluntario/cadastrarDoacao.xhtml
+++ b/src/main/webapp/sistema/Voluntario/cadastrarDoacao.xhtml
@@ -61,7 +61,7 @@
 						</p:selectManyCheckbox>
 
 						<p:commandButton value="Salvar" id="commandButton-salvar"
-							icon="ui-icon-gear" action="#{doacaoController.salvarNovaDoacao}"
+							icon="fa fa-floppy-o" action="#{doacaoController.salvarNovaDoacao}"
 							update="panelGrid-campos-form" ajax="false" />
 
 					</h:panelGrid>
