--- a/src/main/webapp/sistema/Voluntario/editarDoacao.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarDoacao.xhtml
@@ -72,7 +72,7 @@
 						</p:selectManyCheckbox>
 
 						<p:commandButton value="Salvar alterações"
-							id="commandButton-salvar" icon="fa-save"
+							id="commandButton-salvar" icon="fa fa-floppy-o"
 							action="#{editarDoacao.editarDoacao}"
 							update="panelGrid-campos-form" ajax="false" />
 
