--- a/src/main/webapp/sistema/Voluntario/editarEvento.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarEvento.xhtml
@@ -110,7 +110,7 @@
 						<br />
 
 						<p:commandButton value="Salvar Evento" id="commandButton-salvar"
-							icon="fa-save" action="#{editarEvento.editarEvento}"
+							icon="fa fa-floppy-o" action="#{editarEvento.editarEvento}"
 							update="panelGrid-campos-form" ajax="false" />
 
 					</h:panelGrid>
