--- a/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
@@ -24,6 +24,7 @@
 
 			<p:dataGrid value="#{consultaEventosView.eventos}" var="evento"
 				columns="3" layout="grid" rows="6" paginator="true"
+				emptyMessage="Nenhum evento foi cadastrado até o momento."
 				style="margin-top:20px">
 
 				<f:facet name="header"> Eventos </f:facet>
@@ -101,6 +102,7 @@
 						<h:outputText value=" " />
 
 						<p:button value="Editar" outcome="editarEvento.xhtml"
+							icon="fa fa-fw fa-edit"
 							disabled="#{!(consultaEventosView.botaoEditar)}">
 						</p:button>
 
