--- a/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
@@ -23,6 +23,7 @@
 				action="#{consultaVagasView.retornaVagasConformeBusca}"></p:commandButton>
 
 			<p:dataGrid value="#{consultaVagasView.vagas}" var="vaga" columns="3"
+				emptyMessage="Nenhuma vaga foi cadastrada até o momento."
 				layout="grid" rows="9" paginator="true" style="margin-top:20px">
 
 				<f:facet name="header"> Vagas Disponiveis </f:facet>
@@ -121,6 +122,7 @@
 						<h:outputText value=" " />
 
 						<p:button value="Editar" outcome="editarVaga.xhtml"
+							icon="fa fa-fw fa-edit"
 							disabled="#{!(consultaVagasView.botaoEditar)}">
 						</p:button>
 
