--- a/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
@@ -216,7 +216,7 @@
 						</p:selectManyCheckbox>
 
 						<p:commandButton value="Salvar alterações"
-							id="commandButton-salvar" icon="fa-save"
+							id="commandButton-salvar" icon="fa fa-floppy-o"
 							action="#{editarVoluntario.atualizarVoluntario}"
 							update="panelGrid-campos-form" ajax="false" />
 
