--- a/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
@@ -15,53 +15,7 @@
 		<h:form id="form">
 
 			<p:tabView>
-				<p:tab title="Vagas Recomendadas">
 
-					<p:dataGrid value="#{recomendarVagas.vagasRecomendadas}" var="vaga"
-						columns="3" layout="grid" rows="3" paginator="true"
-						styleClass="ui-noborder" style="margin-top:20px">
-						<f:facet name="header"> Vagas Recomendadas: </f:facet>
-						<p:panel>
-							<h:panelGrid columns="1" style="width:100%;"
-								styleClass="ui-noborder">
-								<p:commandLink update=":form:vagaRecomendadaDetail"
-									oncomplete="PF('vagaRecomendadaDialog').show()">
-									<f:setPropertyActionListener value="#{vaga}"
-										target="#{recomendarVagas.selectedVaga}" />
-									<f:setPropertyActionListener value="#{vaga}"
-										target="#{editarVaga.vaga}" />
-									<f:setPropertyActionListener value="#{vaga}"
-										target="#{consultaVagasView.selectedVaga}" />
-									<p:graphicImage value="#{vagaImagem.imagem}"
-										style="width:100%;">
-										<f:param name="vagaId" value="#{vaga.id}" />
-									</p:graphicImage>
-								</p:commandLink>
-								<h:panelGrid columns="2" style="width:100%"
-									styleClass="ui-noborder">
-									<h:outputText value="Titulo:" style="font-weight: bold" />
-									<h:outputText value="#{vaga.titulo}" />
-									<h:outputText value="Local:" style="font-weight: bold" />
-									<h:outputText value="#{vaga.ongEntity.cidade}" />
-									<h:outputText value="Trabalho à distancia"
-										style="font-weight: bold" />
-									<h:outputText value="#{vaga.trabalhoDistancia}" />
-									<p:commandButton value="Mais informações"
-										update=":form:vagaRecomendadaDetail"
-										oncomplete="PF('vagaRecomendadaDialog').show()">
-										<f:setPropertyActionListener value="#{vaga}"
-											target="#{recomendarVagas.selectedVaga}" />
-										<f:setPropertyActionListener value="#{vaga}"
-											target="#{editarVaga.vaga}" />
-										<f:setPropertyActionListener value="#{vaga}"
-											target="#{consultaVagasView.selectedVaga}" />
-									</p:commandButton>
-								</h:panelGrid>
-							</h:panelGrid>
-						</p:panel>
-					</p:dataGrid>
-
-				</p:tab>
 
 				<p:tab title="Todas Vagas Disponiveis">
 
@@ -75,6 +29,7 @@
 
 					<p:dataGrid value="#{consultaVagasView.vagas}" var="vaga"
 						columns="3" layout="grid" rows="9" paginator="true"
+						emptyMessage="Nenhuma vaga foi cadastrada até o momento."
 						style="margin-top:20px">
 						<f:facet name="header"> Todas Vagas Disponiveis: </f:facet>
 						<p:panel>
@@ -120,6 +75,57 @@
 					</p:dataGrid>
 
 				</p:tab>
+
+
+				<p:tab title="Vagas Recomendadas">
+
+					<p:dataGrid value="#{recomendarVagas.vagasRecomendadas}" var="vaga"
+						columns="3" layout="grid" rows="3" paginator="true"
+						emptyMessage="Não há vagas recomendadas até o momento! Você pode começar avaliando as vagas disponiveis."
+						styleClass="ui-noborder" style="margin-top:20px">
+						<f:facet name="header"> Vagas Recomendadas: </f:facet>
+						<p:panel>
+							<h:panelGrid columns="1" style="width:100%;"
+								styleClass="ui-noborder">
+								<p:commandLink update=":form:vagaRecomendadaDetail"
+									oncomplete="PF('vagaRecomendadaDialog').show()">
+									<f:setPropertyActionListener value="#{vaga}"
+										target="#{recomendarVagas.selectedVaga}" />
+									<f:setPropertyActionListener value="#{vaga}"
+										target="#{editarVaga.vaga}" />
+									<f:setPropertyActionListener value="#{vaga}"
+										target="#{consultaVagasView.selectedVaga}" />
+									<p:graphicImage value="#{vagaImagem.imagem}"
+										style="width:100%;">
+										<f:param name="vagaId" value="#{vaga.id}" />
+									</p:graphicImage>
+								</p:commandLink>
+								<h:panelGrid columns="2" style="width:100%"
+									styleClass="ui-noborder">
+									<h:outputText value="Titulo:" style="font-weight: bold" />
+									<h:outputText value="#{vaga.titulo}" />
+									<h:outputText value="Local:" style="font-weight: bold" />
+									<h:outputText value="#{vaga.ongEntity.cidade}" />
+									<h:outputText value="Trabalho à distancia"
+										style="font-weight: bold" />
+									<h:outputText value="#{vaga.trabalhoDistancia}" />
+									<p:commandButton value="Mais informações"
+										update=":form:vagaRecomendadaDetail"
+										oncomplete="PF('vagaRecomendadaDialog').show()">
+										<f:setPropertyActionListener value="#{vaga}"
+											target="#{recomendarVagas.selectedVaga}" />
+										<f:setPropertyActionListener value="#{vaga}"
+											target="#{editarVaga.vaga}" />
+										<f:setPropertyActionListener value="#{vaga}"
+											target="#{consultaVagasView.selectedVaga}" />
+									</p:commandButton>
+								</h:panelGrid>
+							</h:panelGrid>
+						</p:panel>
+					</p:dataGrid>
+
+				</p:tab>
+
 			</p:tabView>
 
 			<p:dialog header="Informações" widgetVar="vagaDialog" modal="true"
@@ -178,7 +184,7 @@
 						<h:outputText value="" />
 						<p:rating value="#{editarVaga.vaga.avaliacaoVaga.avaliacao}" />
 						<p:commandButton value="Avaliar Vaga" id="commandButton-curtir"
-							action="#{editarVaga.avaliarVaga}" />
+							icon="fa fa-star-o" action="#{editarVaga.avaliarVaga}" />
 
 					</p:panelGrid>
 				</p:outputPanel>
@@ -233,6 +239,13 @@
 						<p:commandButton value="Tenho Interesse!"
 							id="commandButton-interesse" icon="ui-icon-like"
 							action="#{consultaVagasView.enviarEmailInteresse}" />
+						<h:outputText value=" " />
+						<h:outputText value=" " />
+
+						<h:outputText value="" />
+						<p:rating value="#{editarVaga.vaga.avaliacaoVaga.avaliacao}" />
+						<p:commandButton value="Avaliar Vaga" id="commandButton-curtir2"
+							icon="fa fa-star-o" action="#{editarVaga.avaliarVaga}" />
 
 					</p:panelGrid>
 				</p:outputPanel>
