--- a/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
@@ -54,7 +54,7 @@
 									<h:outputText value="Titulo:" style="font-weight: bold" />
 									<h:outputText value="#{vaga.titulo}" />
 									<h:outputText value="Local:" style="font-weight: bold" />
-									<h:outputText value="#{vaga.ongEntity.cidade}" />
+									<h:outputText value="#{vaga.ongEntity.cidade} - #{vaga.ongEntity.estado}" />
 									<h:outputText value="Trabalho à distancia"
 										style="font-weight: bold" />
 									<h:outputText value="#{vaga.trabalhoDistancia}" />
@@ -105,7 +105,7 @@
 									<h:outputText value="Titulo:" style="font-weight: bold" />
 									<h:outputText value="#{vaga.titulo}" />
 									<h:outputText value="Local:" style="font-weight: bold" />
-									<h:outputText value="#{vaga.ongEntity.cidade}" />
+									<h:outputText value="#{vaga.ongEntity.cidade} - #{vaga.ongEntity.estado}" />
 									<h:outputText value="Trabalho à distancia"
 										style="font-weight: bold" />
 									<h:outputText value="#{vaga.trabalhoDistancia}" />
