Formatando lists para exibição

--- a/src/main/webapp/cadastrarVoluntario.xhtml
+++ b/src/main/webapp/cadastrarVoluntario.xhtml
@@ -243,8 +243,8 @@
 							value="#{voluntarioController.voluntarioModel.trabalhoDistancia}"
 							required="true"
 							requiredMessage="O campo trabalho à distancia é de preenchimento obrigatório">
-							<f:selectItem itemLabel="Sim" itemValue="S" />
-							<f:selectItem itemLabel="Não" itemValue="N" />
+							<f:selectItem itemLabel="Sim" itemValue="Sim" />
+							<f:selectItem itemLabel="Não" itemValue="Não" />
 						</p:selectOneRadio>
 
 						<p:commandButton value="Salvar" id="commandButton-salvar"
