--- a/src/main/webapp/sistema/ONG/editarONG.xhtml
+++ b/src/main/webapp/sistema/ONG/editarONG.xhtml
@@ -18,7 +18,6 @@
 
 				<h:form id="form-excluir-ong" enctype="multipart/form-data">
 
-<>
 					<p:commandButton value="Excluir cadastro" style="float: right;"
 						id="commandButton-excluir" icon="fa fa-fw fa-remove"
 						action="#{editarONG.removerONG}" ajax="false" />
@@ -121,14 +120,39 @@
 								requiredMessage="O campo cidade é de preenchimento obrigatório" />
 						</p:inplace>
 
-
 						<p:outputLabel value="Estado" for="inputText-estado" />
-						<p:inplace id="inputText-estado" editor="true"
-							emptyLabel="Clique para editar">
-							<p:inputText style="width:100%" maxlength="200"
-								value="#{editarONG.ong.estado}" required="true"
-								requiredMessage="O campo estado  é de preenchimento obrigatório" />
-						</p:inplace>
+						<p:selectOneMenu id="inputText-estado" required="true"
+							requiredMessage="O campo estado  é de preenchimento obrigatório"
+							value="#{editarONG.ong.estado}" style="width:100%">
+							<f:selectItem itemLabel="Escolha um estado" itemValue="" />
+							<f:selectItem itemLabel="AC" itemValue="AC" />
+							<f:selectItem itemLabel="AL" itemValue="AL" />
+							<f:selectItem itemLabel="AP" itemValue="AP" />
+							<f:selectItem itemLabel="AM" itemValue="AM" />
+							<f:selectItem itemLabel="BA" itemValue="BA" />
+							<f:selectItem itemLabel="CE" itemValue="CE" />
+							<f:selectItem itemLabel="DF" itemValue="DF" />
+							<f:selectItem itemLabel="ES" itemValue="ES" />
+							<f:selectItem itemLabel="GO" itemValue="GO" />
+							<f:selectItem itemLabel="MA" itemValue="NA" />
+							<f:selectItem itemLabel="MT" itemValue="MT" />
+							<f:selectItem itemLabel="MS" itemValue="MS" />
+							<f:selectItem itemLabel="MG" itemValue="MG" />
+							<f:selectItem itemLabel="PA" itemValue="PA" />
+							<f:selectItem itemLabel="PB" itemValue="PB" />
+							<f:selectItem itemLabel="PR" itemValue="PR" />
+							<f:selectItem itemLabel="PE" itemValue="PE" />
+							<f:selectItem itemLabel="PI" itemValue="PI" />
+							<f:selectItem itemLabel="RJ" itemValue="RJ" />
+							<f:selectItem itemLabel="RN" itemValue="RN" />
+							<f:selectItem itemLabel="RS" itemValue="RS" />
+							<f:selectItem itemLabel="RO" itemValue="RO" />
+							<f:selectItem itemLabel="RR" itemValue="RR" />
+							<f:selectItem itemLabel="SC" itemValue="SC" />
+							<f:selectItem itemLabel="SP" itemValue="SP" />
+							<f:selectItem itemLabel="SE" itemValue="SE" />
+							<f:selectItem itemLabel="TO" itemValue="TO" />
+						</p:selectOneMenu>
 
 						<p:separator />
 						<br />
