--- a/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
@@ -33,8 +33,7 @@
 						<p:outputLabel value="Senha" for="inputText-senha-cadastro" />
 						<p:inplace id="inputText-senha-cadastro" editor="true"
 							emptyLabel="Clique para editar">
-							<p:password value="#{editarVoluntario.voluntario.senha}"
-								 />
+							<p:password value="#{editarVoluntario.voluntario.senha}" />
 						</p:inplace>
 
 						<p:separator />
@@ -135,12 +134,38 @@
 						</p:inplace>
 
 						<p:outputLabel value="Estado" for="inputText-estado" />
-						<p:inplace id="inputText-estado" editor="true"
-							emptyLabel="Clique para editar">
-							<p:inputText style="width:100%" maxlength="200"
-								value="#{editarVoluntario.voluntario.estado}" required="true"
-								requiredMessage="O campo estado é de preenchimento obrigatório" />
-						</p:inplace>
+						<p:selectOneMenu id="inputText-estado" required="true"
+							requiredMessage="O campo estado  é de preenchimento obrigatório"
+							value="#{editarVoluntario.voluntario.estado}" style="width:100%">
+							<f:selectItem itemLabel="Escolha um estado" itemValue="" />
+							<f:selectItem itemLabel="AC" itemValue="AC" />
+							<f:selectItem itemLabel="AL" itemValue="AL" />
+							<f:selectItem itemLabel="AP" itemValue="AP" />
+							<f:selectItem itemLabel="AM" itemValue="AM" />
+							<f:selectItem itemLabel="BA" itemValue="BA" />
+							<f:selectItem itemLabel="CE" itemValue="CE" />
+							<f:selectItem itemLabel="DF" itemValue="DF" />
+							<f:selectItem itemLabel="ES" itemValue="ES" />
+							<f:selectItem itemLabel="GO" itemValue="GO" />
+							<f:selectItem itemLabel="MA" itemValue="NA" />
+							<f:selectItem itemLabel="MT" itemValue="MT" />
+							<f:selectItem itemLabel="MS" itemValue="MS" />
+							<f:selectItem itemLabel="MG" itemValue="MG" />
+							<f:selectItem itemLabel="PA" itemValue="PA" />
+							<f:selectItem itemLabel="PB" itemValue="PB" />
+							<f:selectItem itemLabel="PR" itemValue="PR" />
+							<f:selectItem itemLabel="PE" itemValue="PE" />
+							<f:selectItem itemLabel="PI" itemValue="PI" />
+							<f:selectItem itemLabel="RJ" itemValue="RJ" />
+							<f:selectItem itemLabel="RN" itemValue="RN" />
+							<f:selectItem itemLabel="RS" itemValue="RS" />
+							<f:selectItem itemLabel="RO" itemValue="RO" />
+							<f:selectItem itemLabel="RR" itemValue="RR" />
+							<f:selectItem itemLabel="SC" itemValue="SC" />
+							<f:selectItem itemLabel="SP" itemValue="SP" />
+							<f:selectItem itemLabel="SE" itemValue="SE" />
+							<f:selectItem itemLabel="TO" itemValue="TO" />
+						</p:selectOneMenu>
 
 						<p:separator />
 						<br />
