--- a/src/main/webapp/sistema/ONG/editarVaga.xhtml
+++ b/src/main/webapp/sistema/ONG/editarVaga.xhtml
@@ -20,7 +20,7 @@
 
 					<p:commandButton value="Excluir vaga" id="commandButton-excluir"
 						icon="fa fa-fw fa-remove" action="#{editarVaga.removerVaga}"
-						ajax="false" />
+						style="float: right;" ajax="false" />
 
 				</h:form>
 
