--- a/src/main/webapp/sistema/ONG/recomendarVoluntario.xhtml
+++ b/src/main/webapp/sistema/ONG/recomendarVoluntario.xhtml
@@ -16,7 +16,7 @@
 
 			<p:dataGrid value="#{recomendarVoluntarios.voluntariosRecomendados}"
 				var="vol" columns="3" layout="grid" rows="3" paginator="true"
-				emptyMessage="Não há voluntarios recomendados à essa vaga até o momento."
+				emptyMessage="Não há voluntarios recomendados para esta vaga até o momento."
 				style="margin-top:20px">
 
 				<f:facet name="header"> Voluntario recomendados para a vaga cadastrada: </f:facet>
