--- a/src/main/webapp/sistema/Voluntario/visualizarDoacoes.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarDoacoes.xhtml
@@ -14,20 +14,21 @@
 	<ui:define name="content">
 		<h:form id="form">
 
+			<p:inputText id="inputText-busca"
+				style="width:30%; height:30px; margin-left:60px" maxlength="80"
+				placeholder="Digite o titulo da doação"
+				value="#{consultaDoacoesView.busca}" />
+			<p:outputLabel value=" " />
+			<p:commandButton value="Buscar" update="form"
+				action="#{consultaDoacoesView.retornaDoacoesConformeBusca}"></p:commandButton>
+
 			<p:dataGrid value="#{consultaDoacoesView.doacoes}" var="doacao"
 				columns="3" layout="grid" rows="9" paginator="true"
 				emptyMessage="Nenhuma doação foi cadastrada até o momento."
 				style="margin-top:20px">
 
 				<f:facet name="header"> Doações </f:facet>
-				
-				<p:inputText id="inputText-busca"
-						style="width:30%; height:30px; margin-left:60px" maxlength="80"
-						placeholder="Digite o titulo do evento"
-						value="#{consultaDoacoesView.busca}" />
-					<p:outputLabel value=" " />
-					<p:commandButton value="Buscar" update="form"
-						action="#{consultaDoacoesView.retornaDoacoesConformeBusca}"></p:commandButton>
+
 
 				<p:panel header="#{doacao.titulo}" style="text-align:center">
 					<h:panelGrid columns="1" style="width:100%; hight:200px"
