--- a/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
@@ -17,7 +17,7 @@
 			<p:tabView>
 
 
-				<p:tab title="Todos Eventos Disponiveis">
+				<p:tab title="Eventos Disponiveis">
 
 					<p:inputText id="inputText-busca"
 						style="width:30%; height:30px; margin-left:60px" maxlength="80"
