--- a/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
@@ -17,7 +17,7 @@
 			<p:tabView>
 
 
-				<p:tab title="Todas Vagas Disponiveis">
+				<p:tab title="Vagas Disponiveis">
 
 					<p:inputText id="inputText-busca"
 						style="width:30%; height:30px; margin-left:60px" maxlength="80"
