--- a/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
@@ -39,7 +39,8 @@
 								target="#{consultaVagasView.selectedVaga}" />
 							<f:setPropertyActionListener value="#{vaga}"
 								target="#{editarVaga.vaga}" />
-							<p:graphicImage value="#{vagaImagem.imagem}" style="width:100%;">
+							<p:graphicImage value="#{vagaImagem.imagem}"
+								style=" max-width:200px; max-height:150px; width: auto; height: auto;">
 								<f:param name="vagaId" value="#{vaga.id}" />
 							</p:graphicImage>
 
