--- a/src/main/webapp/sistema/Voluntario/editarEvento.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarEvento.xhtml
@@ -13,7 +13,7 @@
 <ui:composition template="/template/Voluntario/layoutBase.xhtml">
 	<ui:define name="content">
 		<p:tabView style="width:50% ;margin:auto;">
-			<p:tab title="Editar Cadastro de Evento Beneficiente">
+			<p:tab title="Editar Cadastro de Evento Beneficente">
 
 
 				<h:form id="form-excluir-evento" enctype="multipart/form-data">
