--- a/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
@@ -16,7 +16,6 @@
 		<p:tabView style="width:50% ;margin:auto;">
 			<p:tab title="Editar Cadastro de Voluntario">
 
-
 				<h:form id="form-excluir-voluntario" enctype="multipart/form-data">
 
 					<p:commandButton value="Excluir cadastro" style="float: right;"
@@ -250,11 +249,9 @@
 
 					</h:panelGrid>
 
-					<p:messages showDetail="true" autoUpdate="true" closable="true"
-						severity="warn" />
+					<p:messages showDetail="true" autoUpdate="true" closable="true" severity="warn" />
 					<p:messages autoUpdate="true" closable="true" severity="error" />
-					<p:messages showDetail="true" autoUpdate="true" closable="true"
-						severity="info" />
+					<p:messages showDetail="true" autoUpdate="true" closable="true" severity="info" />
 
 				</h:form>
 
