--- a/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
@@ -31,7 +31,7 @@
 						columns="3" layout="grid" rows="6" paginator="true"
 						emptyMessage="Nenhum evento foi cadastrado até o momento."
 						style="margin-top:20px">
-						<f:facet name="header"> Todos Eventos Disponiveis: </f:facet>
+						<f:facet name="header"> Eventos Disponiveis: </f:facet>
 						<p:panel header="#{evento.titulo}" style="text-align:center">
 							<h:panelGrid columns="1" style="width:100%; hight:200px"
 								styleClass="ui-noborder">
@@ -43,7 +43,8 @@
 									<f:setPropertyActionListener value="#{evento}"
 										target="#{editarEvento.evento}" />
 									<p:graphicImage value="#{eventoImagem.imagem}"
-										style="width:100%">
+										style=" max-width:700px; max-height:500px; width: auto; height: auto;">
+
 										<f:param name="eventoId" value="#{evento.id}" />
 									</p:graphicImage>
 								</p:commandLink>
@@ -77,7 +78,7 @@
 									<f:setPropertyActionListener value="#{evento}"
 										target="#{editarEvento.evento}" />
 									<p:graphicImage value="#{eventoImagem.imagem}"
-										style="width:100%">
+										style=" max-width:700px; max-height:500px; width: auto; height: auto;">
 										<f:param name="eventoId" value="#{evento.id}" />
 									</p:graphicImage>
 								</p:commandLink>
@@ -95,7 +96,7 @@
 				</p:tab>
 			</p:tabView>
 
-			<p:dialog header="Evento Info" widgetVar="eventoDialog" modal="true"
+			<p:dialog header="Informações" widgetVar="eventoDialog" modal="true"
 				showEffect="blind" hideEffect="explode" resizable="false">
 				<p:outputPanel id="eventoDetail" style="text-align:center;">
 					<p:panelGrid columns="2" styleClass="ui-noborder"
@@ -152,7 +153,7 @@
 				</p:outputPanel>
 			</p:dialog>
 
-			<p:dialog header="Evento Info" widgetVar="eventoRecomendadoDialog"
+			<p:dialog header="Informações" widgetVar="eventoRecomendadoDialog"
 				modal="true" showEffect="blind" hideEffect="explode"
 				resizable="false">
 				<p:outputPanel id="eventoRecomendadoDetail"
